--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.2.0",
     "cookie": "^0.4.1",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "mongoose": "^5.13.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
