--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/auth/google": {
-      "target": "http://localhost:5001"
-    },
-    "/api/*": {
-      "target": "http://localhost:5001"
-    }
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -25,6 +17,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
