--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
     "cookie": "^0.4.1",
     "cookie-session": "^1.4.0",
@@ -23,6 +27,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "stripe": "^8.170.0"
   }
 }
