--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.15.5",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
     "cookie": "^0.4.1",
@@ -29,6 +30,7 @@
     "passport-google-oauth20": "^2.0.0",
     "sendgrid": "^5.2.3",
     "session": "^0.1.0",
-    "stripe": "^8.170.0"
+    "stripe": "^8.170.0",
+    "typescript": "^4.4.2"
   }
 }
