adding delete action

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
 GOOGLE_CLIENT_ID='519876679071-i1sn484jbq58gtuefvcrrvgfjroanadq.apps.googleusercontent.com',
 GOOGLE_CLIENT_SECRET='b-MZj8Q9zDiq0puFcwp6BpwI',
-MONGO_URI='mongodb+srv://Ciprian1980:Popa1980@cluster0.crwii.mongodb.net/myFirstDatabase?retryWrites=true&w=majority',
+MONGO_URI='mongodb+srv://Ciprian1980:Popa1980!@cluster0.crwii.mongodb.net/?retryWrites=true&w=majority',
 COOKIE_KEY='asdsaddsdasdsads'
